<resources>
    <string name="app_name">UmahSpa</string>
    <string name="facebook_app_id">2258205391092472</string>
    <string name="fb_login_protocol_scheme">fb2258205391092472</string>
    <string name="Address">Address</string>
    <string name="Cancelbtn">Cancel</string>
    <string name="Comments">Comments</string>
    <string name="StaffAvailable">Change to Available</string>
    <string name="StaffTxtAvailable">Your status is Available</string>
    <string name="acc_setting">please update your account settings</string>
    <string name="accept">Accept Customer Booking</string>
    <string name="action_settings">Settings</string>
    <string name="ad1">Address Line 1</string>
    <string name="ad2">Address Line 2</string>
    <string name="add">Add Profile Image</string>
    <string name="add_my">My Address:</string>
    <string name="addconfirm">ADD CONFIRMED BOOKING TO CALENDAR</string>
    <string name="addr">Address</string>
    <string name="addr_cust">Address for Customer to visit</string>
    <string name="addreesheader">Please enter your address details for Staff to visit.</string>
    <string name="address">Please enter address</string>
    <string name="addtocalender">Add to Calendar</string>
    <string name="air">AirDrop. Tap to turn on Wi-Fi and Bluetooth to Share with AirDrop.</string>
    <string name="all">ALL RESULTS</string>
    <string name="alreadybook">You already have a booking sent</string>
    <string name="ame">Amex</string>
    <string name="app">App</string>
    <string name="app_id">400348593445684</string>
    <string name="appointment">Appointment</string>
    <string name="aw">AWAITING</string>
    <string name="awai_cust">Awaiting customer to confirm your booking, this might take some time. We will send a notification and email if they confirm with you.</string>
    <string name="awaitning">AWAITING</string>
    <string name="back">Back</string>
    <string name="back2">Back</string>
    <string name="base">01</string>
    <string name="bcomplete">Booking Complete</string>
    <string name="blankBooking">You do not have any bookings.</string>
    <string name="confirmblankBooking">You do not have confirmed any bookings.</string>
    <string name="blankBookingConfirm">You do not have any confirmed bookings yet.</string>
    <string name="blankBookingConfirmCust">You still need to confirm a booking from the received tab.</string>
    <string name="blankBookingReceviedCust">We are still waiting for Staff to accept your booking.</string>
    <string name="blankNoti">You do not have any notifications yet.</string>
    <string name="book_con"><u>Booking Confirmed</u></string>
    <string name="book_con1">Booking Confirmed</string>
    <string name="book_my">See details and book my appoinment</string>
    <string name="book_rec">Booking Received</string>
    <string name="bookcan">Booking Cancelled</string>
    <string name="booked">Already Booked</string>
    <string name="bookprice">Please enter booking Price.</string>
    <string name="bookremain">bookings remaining</string>
    <string name="bookremove">Booking Removed</string>
    <string name="brecive">Booking Received</string>
    <string name="brow">Browse</string>
    <string name="busi">CUSTOMER</string>
    <string name="business">Business Name</string>
    <string name="businessLocatiinBtn">Pin business location</string>
    <string name="customerLocatiinBtn">Pin your location</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_book">Cancel Booking</string>
    <string name="cancelbooking">Cancel Booking?</string>
    <string name="cancelbtn">Cancel</string>
    <string name="cancelbtnbooking">Cancel Booking</string>
    <string name="cash">Cash</string>
    <string name="cc">From:</string>
    <string name="change_rating">please change or select rating</string>
    <string name="checkemail">Please check your email for new password.</string>
    <string name="chk_ring">Silent</string>
    <string name="choosbrow">Chose browser</string>
    <string name="close">close</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="comments">Comments to customer</string>
    <string name="commentsdes">Comments</string>
    <string name="con">CONFIRMED</string>
    <string name="condelet">Confirm Delete?</string>
    <string name="confirm_cust">Confirm</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="confirmedtab">Confirmed</string>
    <string name="confremov">Confirm Remove</string>
    <string name="connection_problm">Sorry there is connection problem, please try again later!</string>
    <string name="conp">Current Password</string>
    <string name="contact_head">Easy Spa App Contact</string>
    <string name="correctpass">Please enter correct password.</string>
    <string name="coun">Country</string>
    <string name="country">Country</string>
    <string name="countryHint">Enter Country Name</string>
    <string name="country_code">Please select Phone code</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="cus_email_hint">Email</string>
    <string name="cus_emailadd_hint">Email Address</string>
    <string name="cus_password_hint">Password</string>
    <string name="cus_username_hint">Username</string>
    <string name="cushomeheader">Select the service you would like</string>
    <string name="cust">Customers can come to my business address</string>
    <string name="cust_business">Pin your address</string>
    <string name="cust_will">Customer will come to my business address</string>
    <string name="cust_will_i">Customer wants to visit your business address</string>
    <string name="custo">BUSINESS</string>
    <string name="custommenustring" />
    <string name="decline">Decline</string>
    <string name="des">Description</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="direction">Directions</string>
    <string name="dis">Discount Offered</string>
    <string name="dis_less">discount should be less than booking price</string>
    <string name="dis_price">discount Price should not start with 0</string>
    <string name="disoffer">Discount Offer:</string>
    <string name="dontacc">"Don't have an account?"</string>
    <string name="door">Door,House No, Street, Town</string>
    <string name="down_loadimage">Downloading images please wait...</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="dwnloadimg">Downloading Images...</string>
    <string name="editable">(Only editable in Settings)</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="emailid">Please enter email id.</string>
    <string name="enteremail">Please Enter Valid Email Id</string>
    <string name="enterpass">Please Enter Password</string>
    <string name="enteruname">Please Enter User Name</string>
    <string name="entervisitme">Please Enter Address in Visit me Home</string>
    <string name="error">Error</string>
    <string name="favmessage">You do not have any favourites saved yet</string>
    <string name="favo">Favourite</string>
    <string name="fb">Facebook URL (Optional)</string>
    <string name="fblink"><u>http://www.facebookurl.com</u></string>
    <string name="fblogin">Login with Facebook</string>
    <string name="fil">Filter</string>
    <string name="findlocation">Find Location</string>
    <string name="findmecust">Find more customers</string>
    <string name="forget"><u>Forgot Password</u></string>
    <string name="forgetpass">Forgot Password</string>
    <string name="fortxt">for</string>
    <string name="freemess">Send booking request to Staff</string>
    <string name="fri">Friday</string>
    <string name="full">Full Name</string>
    <string name="gmlogin">Login with Google +</string>
    <string name="google_maps_key">AIzaSyBEm-qWdDcWKceGC1i1NXNqKQEloQdorF0</string>
    <string name="gotospa">I will go to Spa</string>
    <string name="hello_world">Hello world!</string>
    <string name="hin">Add Direction Or Landmark here</string>
    <string name="homemesscust">Staff will visit me at home</string>
    <string name="i_cust">Looking for Spa or Salon</string>
    <string name="i_work">I work in a Spa or Salon</string>
    <string name="image">Image</string>
    <string name="images">Uploaded Images</string>
    <string name="info">Info</string>
    <string name="invalidname">Invalid Username</string>
    <string name="invite">Invite Friends</string>
    <string name="jcb">Jcb</string>
    <string name="lastBooking">Last Booking Details</string>
    <string name="lemail">Login</string>
    <string name="lemail1">Login With Email</string>
    <string name="loadmore">Load More ...</string>
    <string name="loginbtn">Login</string>
    <string name="loginfail">Login failed..</string>
    <string name="logout">Logout</string>
    <string name="logout1">Logout ?</string>
    <string name="mainheader">"Welcome to the World's fastest"</string>
    <string name="mainheader1">growing Spa and Salon booking app</string>
    <string name="mainproimage">Update main profile image</string>
    <string name="mapstatus">Business location is saved</string>
    <string name="master">Master Card</string>
    <string name="match">Matching Services Requested</string>
    <string name="match_off">Matching Services Offered</string>
    <string name="match_offS">Services Offered</string>
    <string name="max5service">Max 5 services allowed</string>
    <string name="menustring">Menu</string>
    <string name="message">Message</string>
    <string name="messagebooking">We are searching for Staff, it may take a few minutes to receive a reply. We will notify you when your request has been accepted.</string>
    <string name="mon">Monday</string>
    <string name="nearme">Near Me</string>
    <string name="newRegDialog">Register New Account</string>
    <string name="newRegSuccessDialog">Registration Success!</string>
    <string name="new_booking">Make a new Booking</string>
    <string name="newp">New Password</string>
    <string name="newpass">Please enter new password.</string>
    <string name="nextbtn">Next</string>
    <string name="no">No</string>
    <string name="nobrowser">There is no browser installed</string>
    <string name="nomail">There is no email client installed.</string>
    <string name="noofpeople">No. of people</string>
    <string name="nop">No. Of People :</string>
    <string name="notificationheader">You have 5 credits</string>
    <string name="notification_lable">Notifications</string>
    <string name="offered">Any Discount Offered (Optional)</string>
    <string name="okbtn">Ok</string>
    <string name="open">Opening Hours</string>
    <string name="opt">Options</string>
    <string name="paidmess">1 credit is taken when you submit a booking request.</string>
    <string name="passincorrect">The username or password you entered is incorrect</string>
    <string name="passnotmatch">New passwords do not match</string>
    <string name="passw">Password</string>
    <string name="pay">Payment Methods</string>
    <string name="payment">Payment Options</string>
    <string name="paymentmethod">Payment Methods</string>
    <string name="peoplext">people</string>
    <string name="send">Send</string>
    <string name="sing"><u>Signup?</u></string>
    <string name="subject">Subject:</string>
    <string name="to">To:</string>
    <string name="twlogin">Login with Twitter</string>
</resources>