<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutHead"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.7"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/llmargin_top_buttom"
                android:layout_marginRight="@dimen/llmargin_top_buttom"
                android:text="@string/cancel"
                android:textColor="#ff1096ef"
                android:textSize="@dimen/txtsize_15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/llmargin_top_buttom"
                android:layout_marginRight="@dimen/llmargin_top_buttom"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contact_head"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize_15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/llmargin_top_buttom"
                android:layout_marginRight="@dimen/llmargin_top_buttom"
                android:text="@string/send"
                android:textColor="#ff1096ef"
                android:textSize="@dimen/txtsize_15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/leftmargin_imgview"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/to"
            android:textColor="#ff4c4a49"
            android:textSize="@dimen/img_heightwidth16dp" />

        <TextView
            android:id="@+id/etMailTo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/leftmargin_imgview"
            android:layout_marginRight="5.0dip"
            android:textColor="@color/emailto"
            android:textSize="@dimen/txtsize14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10.0dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/cc"
            android:textColor="#ff4c4a49"
            android:textSize="@dimen/img_heightwidth16dp" />

        <EditText
            android:id="@+id/etMailFrom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/leftmargin_imgview"
            android:layout_marginRight="5.0dip"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/leftmargin_imgview"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/subject"
            android:textColor="#ff4c4a49"
            android:textSize="@dimen/img_heightwidth16dp" />

        <TextView
            android:id="@+id/etMailSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/leftmargin_imgview"
            android:layout_marginRight="5.0dip"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/leftmargin_imgview"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="@dimen/margin_left5"
            android:layout_marginRight="@dimen/margin_left5"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="9.0"
        android:gravity="left"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mailBodyTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left|top"
            android:inputType="textMultiLine"
            android:lines="100"
            android:maxLength="2000"
            android:minLines="10"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize14dp" />
    </LinearLayout>
</LinearLayout>